# hedgehog

./: .gitignore  Cargo.toml  README.md
examples/: basics.hog  channel.hog  fizzbuzz.hog  hello.hog  parallel.hog  record.hog
src/: ast.rs  builtin.rs  env.rs  eval.rs  exec.rs  lexer.rs  lib.rs  main.rs  parser.rs  report.rs
src/runtime/: channel.rs  env.rs  eval.rs  mod.rs  value.rs
tests/: integration.rs
tests/snapshots/: integration__basics.snap  integration__channel.snap  integration__fizzbuzz.snap  integration__hello.snap  integration__parallel.snap
