[package]
name = "hedgehog"
version = "0.2.2"
edition = "2021"
authors = ["rxxuzi"]
description = "A keyword-less shell scripting language"
readme = "README.md"
repository = "https://github.com/rxxuzi/hedgehog"
license = "MIT"
keywords = ["shell", "scripting", "language", "interpreter", "berry"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
glob = "0.3"

[dev-dependencies]

[[bin]]
name = "hog"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true